tests/ui/layout/thaw-validate-invalid-enum.stderr
error: the `repr(packed)` attribute cannot be used on enums
  --> $DIR/thaw-validate-invalid-enum.rs:3:3
   |
LL | #[repr(packed)]
   |   ^^^^^^^^^^^^
   |
   = help: the `repr(packed)` attribute can be applied to structs and unions

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> $DIR/thaw-validate-invalid-enum.rs:14:9
   |
LL |         e: E,
   |         ^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
LL |         e: std::mem::ManuallyDrop<E>,
   |            +++++++++++++++++++++++ +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0740`.
